Bump kafka-clients from 3.4.0 to 4.0.0